--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -3103,6 +3103,10 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
   -moz-margin-start: 0; /* override default label margin to match description margin */
 }
 
+#canvas-notification-icon {
+  list-style-image: url(chrome://browser/skin/canvas-popup.svg);
+}
+
 .indexedDB-notification-icon,
 #indexedDB-notification-icon {
   list-style-image: url(chrome://global/skin/icons/question-16.png);
@@ -3372,6 +3376,10 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 .popup-progress-cancel:active {
   -moz-image-region: rect(0px, 48px, 16px, 32px);
+}
+
+.popup-notification-icon[popupid="canvas-permissions-prompt"] {
+  list-style-image: url(chrome://browser/skin/canvas-popup.svg);
 }
 
 .popup-notification-icon[popupid="indexedDB-permissions-prompt"],
